удалены классы распознавания слов

--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
   <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
     <div class="col-md-6 px-0">
       <h1 class="display-4 fst-italic">Картошечка</h1>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+      <p class="lead my-3">Приветствую! Здесь ты можешь увидеть основной посыл новостной ленты крупнейших российских источников. Программа оценивает все связки русских слов на сайтах и выдает наиболее популярные. </p>
       <input type="button" onclick="count_rabbits()" value="Считать кролей!"/>
-	  <input type="button" onclick="httpGet()" value="Считать кролей1!"/>
+	  <input type="button" onclick="httpGet()" value="Узнать новостной фон"/>
     </div>
   </div>
 
