--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
     <div class="col-md-6 px-0">
       <h1 class="display-4 fst-italic">Картошечка</h1>
       <p class="lead my-3">Приветствую! Здесь ты можешь увидеть основной посыл новостной ленты крупнейших российских источников. Программа оценивает все связки русских слов на сайтах и выдает наиболее популярные. </p>
-      <input type="button" onclick="count_rabbits()" value="Считать кролей!"/>
 	  <input type="button" onclick="httpGet()" value="Узнать новостной фон"/>
     </div>
   </div>
@@ -144,26 +143,25 @@
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-primary">World</strong>
-          <h3 class="mb-0">Featured post</h3>
+          <strong class="d-inline-block mb-2 text-primary">Hobby</strong>
+          <h3 class="mb-0">My git</h3>
           <div class="mb-1 text-muted">Nov 12</div>
-          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
+          <p class="card-text mb-auto">Здесь можно увидеть как этот, так и другие мои проекты</p>
+          <a href="https://github.com/keksen64" class="stretched-link">See more</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+           <img class="bd-placeholder-img" width="209" height="250" src="http://localhost:8003/a.png" </img>
         </div>
       </div>
     </div>
     <div class="col-md-6">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
-          <h3 class="mb-0">Post title</h3>
+          <strong class="d-inline-block mb-2 text-success">Job</strong>
+          <h3 class="mb-0">My CV</h3>
           <div class="mb-1 text-muted">Nov 11</div>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="stretched-link">Continue reading</a>
+          <p class="mb-auto">На данный момент, я работаю инженером по нагрузочному тестированию в одной из команд разработки Сбера</p>
+          <a href="http://localhost:8003/CV.pdf" class="stretched-link">Read CV</a>
         </div>
         <div class="col-auto d-none d-lg-block">
           <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
