--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             }
 			function httpGet(){
 				var xmlHttp = new XMLHttpRequest();
-				xmlHttp.open( "GET", "http://localhost:8004/words/three", false ); // false for synchronous request
+				xmlHttp.open( "GET", "http://194.32.248.200:8004/words/three", false ); // false for synchronous request
 				xmlHttp.send( null );
 				alert(xmlHttp.responseText)
 				return xmlHttp.responseText;
@@ -98,37 +98,20 @@
   <header class="blog-header lh-1 py-3">
     <div class="row flex-nowrap justify-content-between align-items-center">
       <div class="col-4 pt-1">
-        <a class="link-secondary" href="#">Subscribe</a>
+        <a class="link-secondary" href="https://t.me/kekss_pekss">Subscribe</a>
       </div>
       <div class="col-4 text-center">
-        <a class="blog-header-logo text-dark" href="#">Large</a>
+        <a class="blog-header-logo text-dark" href="#">Hello</a>
       </div>
       <div class="col-4 d-flex justify-content-end align-items-center">
         <a class="link-secondary" href="#" aria-label="Search">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
         </a>
-        <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
       </div>
     </div>
   </header>
 
-  <div class="nav-scroller py-1 mb-2">
-    <nav class="nav d-flex justify-content-between">
-      <a class="p-2 link-secondary" href="#">World</a>
-      <a class="p-2 link-secondary" href="#">U.S.</a>
-      <a class="p-2 link-secondary" href="#">Technology</a>
-      <a class="p-2 link-secondary" href="#">Design</a>
-      <a class="p-2 link-secondary" href="#">Culture</a>
-      <a class="p-2 link-secondary" href="#">Business</a>
-      <a class="p-2 link-secondary" href="#">Politics</a>
-      <a class="p-2 link-secondary" href="#">Opinion</a>
-      <a class="p-2 link-secondary" href="#">Science</a>
-      <a class="p-2 link-secondary" href="#">Health</a>
-      <a class="p-2 link-secondary" href="#">Style</a>
-      <a class="p-2 link-secondary" href="#">Travel</a>
-    </nav>
   </div>
-</div>
 
 <main class="container">
   <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
@@ -150,7 +133,7 @@
           <a href="https://github.com/keksen64" class="stretched-link">See more</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-           <img class="bd-placeholder-img" width="209" height="250" src="http://localhost:8003/a.png" </img>
+           <img class="bd-placeholder-img" width="209" height="250" src="http://194.32.248.200:8003/a.png" </img>
         </div>
       </div>
     </div>
@@ -161,11 +144,10 @@
           <h3 class="mb-0">My CV</h3>
           <div class="mb-1 text-muted">Nov 11</div>
           <p class="mb-auto">На данный момент, я работаю инженером по нагрузочному тестированию в одной из команд разработки Сбера</p>
-          <a href="http://localhost:8003/CV.pdf" class="stretched-link">Read CV</a>
+          <a href="http://194.32.248.200:8003/CV.pdf" class="stretched-link">Read CV</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+          <img class="bd-placeholder-img" width="250" height="250" src="http://localhost:8003/mem.jpeg" </img>
         </div>
       </div>
     </div>
